# bgfx-android-demo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/odinaris/bgfx_android_demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bgfx_renderer.cpp  bgfx_renderer.h  jni_binder.cpp  native-lib.cpp
app/src/main/cpp/shaders/essl/: shaders_essl.h
app/src/main/java/com/odinaris/bgfx_android_demo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/odinaris/bgfx_android_demo/: ExampleUnitTest.kt
docs/: debugging-triangle-render.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
